[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.0"
once_cell="1.12.0"
serde={version ="1.0.203", features = ["derive"]}
serde_json = "1.0.1"
gio = "^0.3.0"
gtk = "^0.3.0"
gdk-pixbuf ="^0.3.0"
id3 = "^0.2.0"
gtk-sys = "^0.5.0"

[features]
default = ["sdl2/image"]

[[bin]]
name = "show_image"

[[bin]]
name = "win"

[[bin]]
name = "macros"

[[bin]]
name = "mplayer"