[package]
name = "rust-examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.32.0"
once_cell="1.12.0"
serde={version ="1.0.203", features = ["derive"]}
serde_json = "1.0.1"
gio = "^0.3.0"
gtk = "^0.3.0"
gdk-pixbuf ="^0.3.0"
id3 = "^0.2.0"
gtk-sys = "^0.5.0"
crossbeam ="^0.3.0"
pulse-simple = "^1.0.0"
m3u = "^1.0.0"
actix-web ="4.3.1"
simple_logger ="2.0.0"
log = "0.4.0"
#puremp3 = "^0.1.0"
minimp3_fixed = { version = "0.5.4", optional = true}
symphonia = { version = "0.5.4", optional = true, default-features = false }
cpal = "0.15.3"
rodio = "0.19.0"

[features]
default = ["sdl2/image"]
mp3 = ["symphonia-mp3"]
symphonia-mp3 = ["symphonia/mp3"]

[[bin]]
name = "show_image"

[[bin]]
name = "win"

[[bin]]
name = "macros"

[[bin]]
name = "mplayer"